--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "firebase": "^11.8.1",
     "flowbite": "^3.1.2",
     "react": "^19.1.0",
