--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "fix-reviews": "node admin/update-reviews-flags.mjs",
+    "diagnose-reviews": "node admin/fix-review-timestamps.mjs",
+    "verify-reviews": "node admin/verify-reviews.js",
+    "cleanup": "node cleanup.js"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
