feat: Enhance Products and TermsOfService pages with new styles and accessibility improvements
- Updated loading spinner color in Products page to saffron.
- Changed background and text colors in Products page for better visibility.
- Refactored TermsOfService page to remove unused state and scroll listener.
- Improved heading styles and background color in TermsOfService page.
- Added new theme CSS file for consistent color usage across the application.
- Introduced accessibility utilities for color contrast checks and ARIA attribute validation.
- Added image optimization utilities for better loading performance.
- Created QA testing script for performance and accessibility checks.
- Updated Tailwind CSS configuration to include new color palette and font families.
- Enhanced Vite configuration for optimized builds and improved development server settings.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "fix-reviews": "node admin/update-reviews-flags.mjs",
     "diagnose-reviews": "node admin/fix-review-timestamps.mjs",
     "verify-reviews": "node admin/verify-reviews.js",
-    "cleanup": "node cleanup.js"
+    "cleanup": "node cleanup.js",
+    "deploy": "npm run lint && npm run build && npm run preview"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
