--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.8.1",
     "flowbite": "^3.1.2",
     "framer-motion": "^12.16.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
