--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:netlify": "node fix-firebase-build.js && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "fix-reviews": "node admin/update-reviews-flags.mjs",
     "diagnose-reviews": "node admin/fix-review-timestamps.mjs",
     "verify-reviews": "node admin/verify-reviews.js",
     "cleanup": "node cleanup.js",
-    "deploy": "npm run lint && npm run build && npm run preview"
+    "deploy": "npm run lint && npm run build:netlify && npm run preview"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
-    "firebase": "^11.8.1",
+    "firebase": "^10.7.1",
     "flowbite": "^3.1.2",
     "framer-motion": "^12.16.0",
     "prop-types": "^15.8.1",
@@ -40,6 +41,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.42.0",
     "vite": "^6.3.5"
   }
 }
