--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "dompurify": "^3.3.0",
     "firebase": "^10.7.1",
     "flowbite": "^3.1.2",
     "framer-motion": "^12.16.0",
