--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,40 +1,67 @@
 {
-  "name": "Karni Exim",
-  "short_name": "Karni Exim",
-  "description": "Premium textile products exported worldwide from India. Quality textiles from Bikaner, Rajasthan.",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#FEFBE3",
-  "theme_color": "#344C5D",  "icons": [
-    {
-      "src": "/icons/logo192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/logo512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "categories": ["business", "shopping", "textile"],
-  "lang": "en-US",
-  "orientation": "any",  "screenshots": [
-    {
-      "src": "/og-image.png",
-      "sizes": "1280x720",
-      "type": "image/png"
-    }
-  ],"shortcuts": [
-    {
-      "name": "View Products",
-      "short_name": "Products",
-      "description": "Browse our product catalog",
-      "url": "/products",
-      "icons": [{ "src": "/icons/logo192.png", "sizes": "192x192" }]
-    }
-  ],
-  "related_applications": []
+    "name":  "Karni Exim",
+    "short_name":  "Karni Exim",
+    "description":  "Premium Indian agro commodities exported worldwide. Oilseeds, pulses, and spices from Bikaner, Rajasthan.",
+    "start_url":  "/",
+    "display":  "standalone",
+    "background_color":  "#FEFBE3",
+    "theme_color":  "#344C5D",
+    "icons":  [
+                  {
+                      "src":  "/icons/logo192.png",
+                      "sizes":  "192x192",
+                      "type":  "image/png",
+                      "purpose":  "any maskable"
+                  },
+                  {
+                      "src":  "/icons/logo512.png",
+                      "sizes":  "512x512",
+                      "type":  "image/png",
+                      "purpose":  "any maskable"
+                  },
+                  {
+                      "src":  "/icons/logo192.png",
+                      "sizes":  "48x48",
+                      "type":  "image/png",
+                      "purpose":  "any"
+                  },
+                  {
+                      "src":  "/icons/logo192.png",
+                      "sizes":  "32x32",
+                      "type":  "image/png",
+                      "purpose":  "any"
+                  }
+              ],
+    "categories":  [
+                       "business",
+                       "shopping",
+                       "agriculture",
+                       "food"
+                   ],
+    "lang":  "en-US",
+    "orientation":  "any",
+    "screenshots":  [
+                        {
+                            "src":  "/og-image.png",
+                            "sizes":  "1280x720",
+                            "type":  "image/png"
+                        }
+                    ],
+    "shortcuts":  [
+                      {
+                          "name":  "View Products",
+                          "short_name":  "Products",
+                          "description":  "Browse our product catalog",
+                          "url":  "/products",
+                          "icons":  [
+                                        {
+                                            "src":  "/icons/logo192.png",
+                                            "sizes":  "192x192"
+                                        }
+                                    ]
+                      }
+                  ],
+    "related_applications":  [
+
+                             ]
 }
